--- a/style.css
+++ b/style.css
@@ -220,6 +220,46 @@ body{
     }
 }
 
+@media (max-width: 768px) {
+    .header img {
+        width: 100px;
+        height: 100px;
+    }
+
+    .header-menu li {
+        margin-left: 10px;
+    }
+
+    .header-menu li a {
+        font-size: 16px;
+        padding: 10px 16px;
+    }
+
+    .banner h2 {
+        font-size: 20px;
+    }
+
+    .banner p {
+        font-size: 8px;
+    }
+
+    .services img {
+        height: 100px;
+    }
+
+    .about-us p, .our-mission p {
+        width: 90%;
+    }
+
+    .animation {
+        position: relative;
+        right: 0;
+        top: 80%;
+        height: 250px;
+        width: 250px;
+    }
+}
+
 @media (max-width: 480px) {
     .header img {
         width: 80px;
