--- a/style.css
+++ b/style.css
@@ -245,7 +245,7 @@ body{
     }
 
     .header-menu li a {
-        display: inline-block;
+        display: flex;
         font-size: 14px;
         padding: 8px 12px;
     }
