--- a/style.css
+++ b/style.css
@@ -237,6 +237,14 @@ body{
         height: 80px;
     }
 
+    .header {
+    background-color: #f0e6e4;
+    width: 100%;
+    display: flex;
+    align-items: center;  /* Center items vertically */
+    justify-content: space-between; /* Space out items */
+    padding: 10px 20px; /* Padding inside the header */
+
 
 
     .header-menu li {
@@ -245,7 +253,6 @@ body{
     }
 
     .header-menu li a {
-        display: flex;
         font-size: 14px;
         padding: 8px 12px;
     }
