--- a/style.css
+++ b/style.css
@@ -237,13 +237,6 @@ body{
         height: 80px;
     }
 
-    .header {
-    background-color: #f0e6e4;
-    width: 100%;
-    display: flex;
-    align-items: center;  /* Center items vertically */
-    justify-content: space-between; /* Space out items */
-    padding: 10px 20px; /* Padding inside the header */
 
 
 
@@ -255,6 +248,7 @@ body{
     .header-menu li a {
         font-size: 14px;
         padding: 8px 12px;
+        float: right;
     }
 
     .banner h2 {
