--- a/style.css
+++ b/style.css
@@ -248,6 +248,7 @@ body{
     .header-menu li a {
         font-size: 14px;
         padding: 8px 12px;
+        float: right;
     }
 
     .banner h2 {
