--- a/style.css
+++ b/style.css
@@ -202,6 +202,7 @@ body{
     .header-menu li a {
         font-size: 16px;
         padding: 10px 16px;
+        float: right;
     }
 
     .banner h2 {
